--- a/App/Views/admin/error.html
+++ b/App/Views/admin/error.html
@@ -13,7 +13,7 @@
         <main class="main main--error">
 
             <h3 class="heading-3">{{ title }}</h3>
-            <p>An error occured on the server side. Please try again or contact AmnioN Web.</p><br/>
+            <p>An error occured on the server side. Please try again or contact AmnioM Web.</p><br/>
             <p>Complete messasge:</p>
             <p>{{ message }}</p>
             
