--- a/App/Views/admin/index.html
+++ b/App/Views/admin/index.html
@@ -13,10 +13,10 @@
         <main class="main main--index">
 
             <div class="visiting-card">
-                <h3 class="heading-3">AmnioN Web</h3>
-                <p class="paragraph-normal">team@amnionweb.cz</p>
+                <h3 class="heading-3">AmnioM Web</h3>
+                <p class="paragraph-normal">team@amniomweb.cz</p>
                 <p class="paragraph-normal">+420 735 044 114</p>
-                <a target="_blank" rel="noopener" href="https://amnionweb.cz"><p class="paragraph-normal">www.amnionweb.cz</p></a>
+                <a target="_blank" rel="noopener" href="https://amniomweb.cz"><p class="paragraph-normal">www.amniomweb.cz</p></a>
             </div>
             
         </main>
