--- a/App/Views/includes/header.html
+++ b/App/Views/includes/header.html
@@ -8,9 +8,16 @@
     src="img/hero_1920.jpg"
     alt="Táňa a strom"
     srcset="
+      img/hero_800.jpg 800w,
+      img/hero_1000.jpg 1000w,
+      img/hero_1300.jpg 1300w,
+      img/hero_1600.jpg 1600w,
       img/hero_1920.jpg 1920w,
       img/hero_2300.jpg 2300w,
-      img/hero_big.jpg 5472w
+      img/hero_2600.jpg 2600w,
+      img/hero_3000.jpg 3000w,
+      img/hero_3300.jpg 3300w,
+      img/hero_big.jpg 3648w
     "
     sizes="110vw"
   >
