--- a/App/Views/includes/postScriptum.html
+++ b/App/Views/includes/postScriptum.html
@@ -1,7 +1,7 @@
 <section class="postScriptum closed" id="post-scriptum">
     <img
         src="img/amnion_1920.jpg"
-        alt="AmnioN Team"
+        alt="AmnioM Team"
         class="postScriptum__photo"
         srcset="
             img/amnion_600.jpg 600w,
@@ -12,5 +12,5 @@
         "
         sizes="100vw"
     >
-    <h2 class="heading-2">S tvorbou webu jsme Táni rádi pomohli, AmnioN&nbsp;Web</h2>
+    <h2 class="heading-2">S tvorbou webu jsme Táni rádi pomohli, AmnioM&nbsp;Web</h2>
 </section>
