--- a/src/client/scss/main.scss
+++ b/src/client/scss/main.scss
@@ -21,5 +21,6 @@
 @import 'sections/topics';
 @import 'sections/way';
 @import 'sections/reviews';
+@import 'sections/ringana';
 @import 'sections/book';
 
