--- a/App/Views/admin/includes/footer.html
+++ b/App/Views/admin/includes/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer">
-    <a target="_blank" rel="noopener" href="https://amnionweb.cz" class="footer__link"><p class="paragraph-small">Web spravuje AmnioN Web</p></a>
-    <p class="paragraph-small">team@amnionweb.cz</p>
+    <a target="_blank" rel="noopener" href="https://amniomweb.cz" class="footer__link"><p class="paragraph-small">Web spravuje AmnioM Web</p></a>
+    <p class="paragraph-small">team@amniomweb.cz</p>
 </footer>
