--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -22,6 +22,9 @@
     <title>Taťjana Horká | Vzájemně v pohybu</title>
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <script src="js/index.js" defer></script>
 </head>
 <body>
@@ -57,6 +60,9 @@
     
     <!-- REVIEWS -->
     {{ include('includes/reviews.html') }}
+
+    <!-- RINGANA -->
+    {{ include('includes/ringana.html') }}
     
     <!-- FOOTER -->
     {{ include('includes/footer.html') }}
