--- a/public/css/style.css
+++ b/public/css/style.css
@@ -194,7 +194,8 @@ body {
   font-size: 1.6rem;
   font-family: "Kalam", cursive;
   overflow-x: hidden;
-  overflow-y: auto; }
+  overflow-y: auto;
+  background-color: white; }
 
 a,
 a:visited,
@@ -837,45 +838,27 @@ a:link {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center 70%;
+    object-position: center 30%;
     position: absolute; }
     @media screen and (max-width: 1750px) {
       .header__bg {
         transform: scale(1.05) translateY(-5rem); } }
     @media screen and (max-width: 1500px) {
       .header__bg {
-        transform: scale(1.1) translateY(-10rem); } }
-    @media screen and (max-width: 1300px) {
-      .header__bg {
-        transform: scale(1.3) translateY(-10rem); } }
+        object-position: center 0%; } }
     @media screen and (max-width: 1000px) {
       .header__bg {
-        transform: scale(1.3) translateY(-5rem); } }
-    @media screen and (max-width: 500px) {
+        object-position: 80% 0%; } }
+    @media screen and (max-width: 800px) {
       .header__bg {
-        transform: scale(1.2) translateY(-5rem); } }
+        object-position: 70% 0%; } }
   .header__overlay {
     width: 100%;
     height: calc(100% + 2px);
-    background-image: linear-gradient(to bottom, transparent 95%, white 99%);
+    background-image: linear-gradient(to bottom, transparent 99%, white 100%);
     position: absolute;
     top: 0;
     left: 0; }
-    @media screen and (max-width: 1750px) {
-      .header__overlay {
-        transform: scale(1.05) translateY(-5rem); } }
-    @media screen and (max-width: 1500px) {
-      .header__overlay {
-        transform: scale(1.1) translateY(-10rem); } }
-    @media screen and (max-width: 1300px) {
-      .header__overlay {
-        transform: scale(1.3) translateY(-10rem); } }
-    @media screen and (max-width: 1000px) {
-      .header__overlay {
-        transform: scale(1.3) translateY(-5rem); } }
-    @media screen and (max-width: 500px) {
-      .header__overlay {
-        transform: scale(1.2) translateY(-5rem); } }
   .header__text {
     position: absolute;
     z-index: 1;
@@ -892,7 +875,7 @@ a:link {
         padding-bottom: 5rem;
         left: unset;
         top: unset;
-        bottom: 0; } }
+        bottom: 30px; } }
     @media screen and (max-width: 700px) {
       .header__text {
         padding-top: 3rem;
@@ -901,7 +884,8 @@ a:link {
       text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.2); }
       @media screen and (max-width: 1000px) {
         .header__text > * {
-          text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.5); } }
+          text-shadow: none;
+          color: #9CBD6F; } }
   .header .heading-2 {
     text-align: left; }
     @media screen and (max-width: 1000px) {
@@ -1611,6 +1595,88 @@ a:link {
       height: 70rem;
       padding-bottom: 10rem; } }
 
+.ringana {
+  margin-bottom: 10rem;
+  padding: 5rem 20rem;
+  background-image: linear-gradient(270.94deg, #E6EFDC 0.42%, rgba(159, 191, 115, 0.75) 72.85%, #9FBF73 98.8%);
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+  @media only screen and (max-width: 1000px) {
+    .ringana {
+      padding: 5rem 10rem; } }
+  @media only screen and (max-width: 550px) {
+    .ringana {
+      padding: 5rem; } }
+  @media only screen and (max-width: 400px) {
+    .ringana {
+      padding: 5rem 3rem; } }
+  .ringana__grid {
+    display: grid;
+    grid-template-areas: "a b" "a c" "a d"; }
+    @media only screen and (max-width: 1000px) {
+      .ringana__grid {
+        grid-template-areas: "a b" "c c" "d d"; } }
+  .ringana__catchword {
+    font-size: 2.9rem;
+    font-family: 'Roboto', sans-serif;
+    margin-right: 10rem;
+    grid-area: a; }
+    @media only screen and (max-width: 1000px) {
+      .ringana__catchword {
+        place-self: center start; } }
+    @media only screen and (max-width: 550px) {
+      .ringana__catchword {
+        margin-right: 5rem;
+        font-size: 1.8rem; } }
+    @media only screen and (max-width: 400px) {
+      .ringana__catchword {
+        margin-right: 3rem; } }
+    .ringana__catchword-1, .ringana__catchword-2, .ringana__catchword-3, .ringana__catchword-6, .ringana__catchword-7 {
+      color: white; }
+    .ringana__catchword-4, .ringana__catchword-5 {
+      color: #353D2A;
+      text-decoration: underline white; }
+    .ringana__catchword-1 {
+      margin-left: 5%; }
+    .ringana__catchword-2 {
+      margin-left: 40%; }
+    .ringana__catchword-3 {
+      margin-left: 20%; }
+    .ringana__catchword-6 {
+      margin-left: 35%; }
+    .ringana__catchword-7 {
+      margin-left: 30%; }
+    .ringana__catchword span {
+      text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
+      display: block; }
+  .ringana__text {
+    grid-area: b;
+    place-self: end start; }
+    @media only screen and (max-width: 1000px) {
+      .ringana__text {
+        place-self: center start; } }
+    @media only screen and (max-width: 550px) {
+      .ringana__text {
+        font-size: 1.4rem; } }
+  .ringana__contact {
+    font-weight: bold;
+    grid-area: c;
+    place-self: start start; }
+    @media only screen and (max-width: 1000px) {
+      .ringana__contact {
+        margin: 5rem 0;
+        text-align: center;
+        place-self: center center; } }
+  .ringana__cta {
+    grid-area: d;
+    justify-self: end; }
+    @media only screen and (max-width: 1000px) {
+      .ringana__cta {
+        place-self: center center; } }
+    .ringana__cta__img {
+      height: 7rem; }
+
 .book {
   height: auto;
   padding-left: 5rem;
@@ -1661,6 +1727,7 @@ a:link {
   .book__image {
     height: 100%;
     width: auto;
+    object-fit: cover;
     transform: translateX(calc(50vw - 680px)) scale(1.3); }
     @media screen and (max-width: 1000px) {
       .book__image {
