--- a/src/client/scss/sections/_book.scss
+++ b/src/client/scss/sections/_book.scss
@@ -59,6 +59,8 @@
     height: 100%;
     width: auto;
 
+    object-fit: cover;
+
     transform: translateX(calc(50vw - 680px)) scale(1.3);
 
     @media screen and (max-width: 1000px) { 
