--- a/src/client/scss/sections/_header.scss
+++ b/src/client/scss/sections/_header.scss
@@ -14,7 +14,7 @@
     height: 100%;
 
     object-fit: cover;
-    object-position: center 70%;
+    object-position: center 30%;
 
     position: absolute;
 
@@ -22,42 +22,48 @@
       transform: scale(1.05) translateY(-5rem);    
     }
     @media screen and (max-width: 1500px) {  
-      transform: scale(1.1) translateY(-10rem);    
+      //transform: scale(1.1) translateY(-10rem); 
+      object-position: center 0%;
     }
     @media screen and (max-width: 1300px) {  
-      transform: scale(1.3) translateY(-10rem);    
+      //transform: scale(1.3) translateY(-10rem);    
     }
     @media screen and (max-width: 1000px) {  
-      transform: scale(1.3) translateY(-5rem);
+      //transform: scale(1.3) translateY(-5rem);
+      object-position: 80% 0%;
+    }
+    @media screen and (max-width: 800px) {  
+      //transform: scale(1.3) translateY(-5rem);
+      object-position: 70% 0%;
     }
     @media screen and (max-width: 500px) {  
-      transform: scale(1.2) translateY(-5rem);
+      //transform: scale(1.2) translateY(-5rem);
     }
   }
 
   &__overlay {
     width: 100%;
     height: calc(100% + 2px);
-    background-image: linear-gradient(to bottom, transparent 95%, white 99%);
+    background-image: linear-gradient(to bottom, transparent 99%, white 100%);
 
     position: absolute;
     top: 0;
     left: 0;
 
     @media screen and (max-width: 1750px) {  
-      transform: scale(1.05) translateY(-5rem);    
+      //transform: scale(1.05) translateY(-5rem);    
     }
     @media screen and (max-width: 1500px) {  
-      transform: scale(1.1) translateY(-10rem);    
+      //transform: scale(1.1) translateY(-10rem);    
     }
     @media screen and (max-width: 1300px) {  
-      transform: scale(1.3) translateY(-10rem);    
+      //transform: scale(1.3) translateY(-10rem);    
     }
     @media screen and (max-width: 1000px) {  
-      transform: scale(1.3) translateY(-5rem);
+      //transform: scale(1.3) translateY(-5rem);
     }
     @media screen and (max-width: 500px) {  
-      transform: scale(1.2) translateY(-5rem);
+      //transform: scale(1.2) translateY(-5rem);
     }
   }
 
@@ -79,7 +85,7 @@
 
       left: unset;
       top: unset;
-      bottom: 0;
+      bottom: 30px;
     }
     @media screen and (max-width: 700px) {
       padding-top: 3rem;
@@ -90,7 +96,8 @@
       text-shadow: 1px 2px 1px $color-black-overlay-light;
 
       @media screen and (max-width: $bp-header-mobile) {
-        text-shadow: 1px 1px 1px $color-black-overlay;
+        text-shadow: none;
+        color: $color-green;
       }
     }
   }
