click here ringana

--- a/App/Views/includes/ringana.html
+++ b/App/Views/includes/ringana.html
@@ -1,18 +1,33 @@
 <section class="ringana">
-    <div class="ringana__grid">
-        <div class="ringana__catchword">
-            <span class="ringana__catchword-1">make</span>
-            <span class="ringana__catchword-2">the</span>
-            <span class="ringana__catchword-3">change</span>
-            <span class="ringana__catchword-4">be the</span>
-            <span class="ringana__catchword-5">change</span>
-            <span class="ringana__catchword-6">So</span>
-            <span class="ringana__catchword-7">free</span>
-        </div>
-        <p class="ringana__text">Taťjana Horká používá veganskou přírodní kosmetiku, která není testovaná na zvířatech. Taťjana se stala partnerkou této rakouské firmy RINGANA.</p>
-        <p class="ringana__contact">V případě zájmu, kontaktujte: tatjana-horka.ringana.com</p>
-        <a href="https://tatjana-horka.ringana.com" target="_blank" rel="norefferer" class="ringana__cta">
-            <img src="img/ringana-button.svg" alt="RINGANA button" class="ringana__cta__img">
-        </a>
+  <div class="ringana__grid">
+    <div class="ringana__catchword">
+      <span class="ringana__catchword-1">make</span>
+      <span class="ringana__catchword-2">the</span>
+      <span class="ringana__catchword-3">change</span>
+      <span class="ringana__catchword-4">be the</span>
+      <span class="ringana__catchword-5">change</span>
+      <span class="ringana__catchword-6">So</span>
+      <span class="ringana__catchword-7">free</span>
     </div>
+    <p class="ringana__text">
+      Taťjana Horká používá veganskou přírodní kosmetiku, která není testovaná
+      na zvířatech. Taťjana se stala partnerkou této rakouské firmy RINGANA.
+    </p>
+    <p class="ringana__contact">
+      V případě zájmu, kontaktujte: tatjana-horka.ringana.com
+    </p>
+    <a
+      href="https://tatjana-horka.ringana.com"
+      target="_blank"
+      rel="norefferer"
+      class="ringana__cta"
+    >
+      <img
+        src="img/ringana-button.svg"
+        alt="RINGANA button"
+        class="ringana__cta__img"
+      />
+      <p>Klikni ZDE</p>
+    </a>
+  </div>
 </section>
