--- a/App/Views/includes/cooperation.html
+++ b/App/Views/includes/cooperation.html
@@ -46,7 +46,7 @@
             <div class="cooperation-way__content">
                 <h4 class="heading-4 heading-4--bold">Individuální konzultace</h4>
                 <p class="paragraph-1">
-                    Otevirám možnost osobních, párových a skupinových konzultací na Divadelni 3 v Brně. Objednání předem je nutné. Nepotřebujete žádné doporučení, certifikát ani tečku. Konzultace jsou na přímou úhradu podle ceníku viz níže.
+                    Konzultace jsou na objednání, probíhají na Divadelní 3 v Brně. Nepotřebujete doporučení, certifikát ani tečku. Jsou na přímou úhradu podle ceníku níže.
                 </p>
             </div>
             <svg preserveAspectRatio="none" viewBox="0 0 219 203" fill="none" xmlns="http://www.w3.org/2000/svg" class="cooperation-way__drawing cooperation-way__drawing--consultations">
