--- a/App/Views/index.html
+++ b/App/Views/index.html
@@ -1,74 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="/img/bloom.png">    
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/img/bloom.png" />
     <link rel="canonical" href="https://www.tatjanahorka.cz" />
     <meta property="og:description" content="Vzájemně v pohybu" />
     <meta property="og:title" content="Taťjana Horká" />
     <meta property="og:url" content="https://www.tatjanahorka.cz" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://www.tatjanahorka.cz/img/hero_1920.jpg" />
-    <meta property="og:image:secure_url" content="https://www.tatjanahorka.cz/img/hero_1920.jpg" />
+    <meta
+      property="og:image"
+      content="https://www.tatjanahorka.cz/img/hero_1920.jpg"
+    />
+    <meta
+      property="og:image:secure_url"
+      content="https://www.tatjanahorka.cz/img/hero_1920.jpg"
+    />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1920" />
     <meta property="og:image:height" content="1280" />
     <meta property="og:locale" content="cs_CZ" />
     <meta name="robots" content="index, follow" />
-    <meta name="keywords" content="taťjana, horká">
-    <meta name="author" content="Taťjana Horká">
-    <meta name="description" content="Vzájemně v pohybu">
+    <meta name="keywords" content="taťjana, horká" />
+    <meta name="author" content="Taťjana Horká" />
+    <meta name="description" content="Vzájemně v pohybu" />
     <title>Taťjana Horká | Vzájemně v pohybu</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;600&family=Kalam:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <script src="js/index.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <!-- DEFINING SVGs -->
     {{ include('includes/svg.html') }}
 
     <!-- HEADER -->
     {{ include('includes/header.html') }}
-    
+
     <!-- EVENTS -->
     {{ include('includes/events.html') }}
-    
+
     <!-- PASSED EVENTS -->
     {{ include('includes/passedEvents.html') }}
 
-    <!-- BOOK -->
-    {{ include('includes/book.html') }}
-    
+    <!-- COURSE -->
+    <!-- {{ include('includes/course.html') }} -->
+
     <!-- COOPERATION -->
     {{ include('includes/cooperation.html') }}
-    
+
     <!-- PROFILE -->
     {{ include('includes/profile.html') }}
-    
+
     <!-- ORGANIZATIONS -->
     {{ include('includes/organizations.html') }}
-    
+
     <!-- TOPICS -->
     {{ include('includes/topics.html') }}
-    
+
     <!-- WAY -->
     {{ include('includes/way.html') }}
-    
+
     <!-- REVIEWS -->
     {{ include('includes/reviews.html') }}
 
     <!-- RINGANA -->
     {{ include('includes/ringana.html') }}
-    
+
     <!-- FOOTER -->
     {{ include('includes/footer.html') }}
 
     <!-- POSTSCRIPTUM -->
     {{ include('includes/postScriptum.html') }}
-
-</body>
+  </body>
 </html>
