--- a/src/client/scss/main.scss
+++ b/src/client/scss/main.scss
@@ -1,26 +1,25 @@
-@import 'abstracts/variables';
-@import 'abstracts/animations';
-@import 'abstracts/mixins';
+@import "abstracts/variables";
+@import "abstracts/animations";
+@import "abstracts/mixins";
 
-@import 'base/base';
-@import 'base/typography';
-@import 'base/utilities';
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
-@import 'components/cooperation-way';
-@import 'components/modal';
-@import 'components/review';
+@import "components/cooperation-way";
+@import "components/modal";
+@import "components/review";
 
-@import 'sections/cooperation';
-@import 'sections/events';
-@import 'sections/footer';
-@import 'sections/header';
-@import 'sections/organizations';
-@import 'sections/passedEvents';
-@import 'sections/postScriptum';
-@import 'sections/profile';
-@import 'sections/topics';
-@import 'sections/way';
-@import 'sections/reviews';
-@import 'sections/ringana';
-@import 'sections/book';
-
+@import "sections/cooperation";
+@import "sections/events";
+@import "sections/footer";
+@import "sections/header";
+@import "sections/organizations";
+@import "sections/passedEvents";
+@import "sections/postScriptum";
+@import "sections/profile";
+@import "sections/topics";
+@import "sections/way";
+@import "sections/reviews";
+@import "sections/ringana";
+@import "sections/course.scss";
