--- a/src/client/scss/sections/_header.scss
+++ b/src/client/scss/sections/_header.scss
@@ -5,8 +5,8 @@
   position: relative;
   overflow: hidden;
 
-  @media screen and (max-width: 700px) {  
-   min-height: 50rem;
+  @media screen and (max-width: 700px) {
+    min-height: 50rem;
   }
 
   &__bg {
@@ -18,25 +18,25 @@
 
     position: absolute;
 
-    @media screen and (max-width: 1750px) {  
-      transform: scale(1.05) translateY(-5rem);    
+    @media screen and (max-width: 1750px) {
+      transform: scale(1.05) translateY(-5rem);
     }
-    @media screen and (max-width: 1500px) {  
-      //transform: scale(1.1) translateY(-10rem); 
+    @media screen and (max-width: 1500px) {
+      //transform: scale(1.1) translateY(-10rem);
       object-position: center 0%;
     }
-    @media screen and (max-width: 1300px) {  
-      //transform: scale(1.3) translateY(-10rem);    
+    @media screen and (max-width: 1300px) {
+      //transform: scale(1.3) translateY(-10rem);
     }
-    @media screen and (max-width: 1000px) {  
+    @media screen and (max-width: 1000px) {
       //transform: scale(1.3) translateY(-5rem);
       object-position: 80% 0%;
     }
-    @media screen and (max-width: 800px) {  
+    @media screen and (max-width: 800px) {
       //transform: scale(1.3) translateY(-5rem);
       object-position: 70% 0%;
     }
-    @media screen and (max-width: 500px) {  
+    @media screen and (max-width: 500px) {
       //transform: scale(1.2) translateY(-5rem);
     }
   }
@@ -50,19 +50,19 @@
     top: 0;
     left: 0;
 
-    @media screen and (max-width: 1750px) {  
-      //transform: scale(1.05) translateY(-5rem);    
+    @media screen and (max-width: 1750px) {
+      //transform: scale(1.05) translateY(-5rem);
     }
-    @media screen and (max-width: 1500px) {  
-      //transform: scale(1.1) translateY(-10rem);    
+    @media screen and (max-width: 1500px) {
+      //transform: scale(1.1) translateY(-10rem);
     }
-    @media screen and (max-width: 1300px) {  
-      //transform: scale(1.3) translateY(-10rem);    
+    @media screen and (max-width: 1300px) {
+      //transform: scale(1.3) translateY(-10rem);
     }
-    @media screen and (max-width: 1000px) {  
+    @media screen and (max-width: 1000px) {
       //transform: scale(1.3) translateY(-5rem);
     }
-    @media screen and (max-width: 500px) {  
+    @media screen and (max-width: 500px) {
       //transform: scale(1.2) translateY(-5rem);
     }
   }
@@ -78,7 +78,7 @@
 
     @media screen and (max-width: $bp-header-mobile) {
       width: 100%;
-      background-color: rgba($color-white, .5);
+      background-color: rgba($color-white, 0.5);
       margin-top: auto;
       padding-top: 5rem;
       padding-bottom: 5rem;
@@ -93,11 +93,11 @@
     }
 
     & > * {
-      text-shadow: 1px 2px 1px $color-black-overlay-light;
+      text-shadow: 1px 2px 8px $color-black;
 
       @media screen and (max-width: $bp-header-mobile) {
-        text-shadow: none;
-        color: $color-green;
+        // text-shadow: none;
+        // color: $color-green;
       }
     }
   }
@@ -105,12 +105,12 @@
     text-align: left;
 
     @media screen and (max-width: $bp-header-mobile) {
-     text-align: center;
+      text-align: center;
     }
   }
   & .heading-1 {
-    margin-bottom: .5rem;
+    margin-bottom: 0.5rem;
 
     text-align: center;
-  } 
+  }
 }
