ICO fix, new imgs

--- a/App/Views/includes/footer.html
+++ b/App/Views/includes/footer.html
@@ -1,17 +1,23 @@
-        <footer class="footer">
-            <div class="footer__columns">
-                <div class="footer__columns__column">
-                    <h5 class="heading-5">Kontakt</h5>
-                    <p class="paragraph-1">Ič: 079 52 320</p>
-                    <p class="paragraph-1">tatjanahorka@gmail.com</p>
-                    <p class="paragraph-1 paragraph-1__break">+420 777 743 704</p>
-                    <p class="paragraph-1">Volejte Po - Pá mezi 18:00-19:00</p>
-                </div>
-                <div class="footer__columns__column">
-                    <h5 class="heading-5">Cena za konzultační služby</h5>
-                    <p class="paragraph-1">Individuální konzultační hodina / 2&nbsp;500&nbsp;Kč</p>
-                    <p class="paragraph-1">Párová konzultační hodina / 3&nbsp;700&nbsp;Kč</p>
-                    <p class="paragraph-1 paragraph-1__break">Skupinová práce hodina / 5&nbsp;000&nbsp;Kč</p>
-                </div>
-            </div>   
-        </footer>
+<footer class="footer">
+  <div class="footer__columns">
+    <div class="footer__columns__column">
+      <h5 class="heading-5">Kontakt</h5>
+      <p class="paragraph-1">Ič: 079 59 320</p>
+      <p class="paragraph-1">tatjanahorka@gmail.com</p>
+      <p class="paragraph-1 paragraph-1__break">+420 777 743 704</p>
+      <p class="paragraph-1">Volejte Po - Pá mezi 18:00-19:00</p>
+    </div>
+    <div class="footer__columns__column">
+      <h5 class="heading-5">Cena za konzultační služby</h5>
+      <p class="paragraph-1">
+        Individuální konzultační hodina / 2&nbsp;500&nbsp;Kč
+      </p>
+      <p class="paragraph-1">Párová konzultační hodina / 3&nbsp;700&nbsp;Kč</p>
+      <p class="paragraph-1">Rodinná konzultační hodina / 4&nbsp;500&nbsp;Kč</p>
+      <p class="paragraph-1">Skupinová práce hodina / 5&nbsp;000&nbsp;Kč</p>
+      <p class="paragraph-1 paragraph-1__break">
+        Telefonická konzultace hodina / 1&nbsp;500&nbsp;Kč (25Kč/minuta)
+      </p>
+    </div>
+  </div>
+</footer>
