--- a/App/Views/includes/header.html
+++ b/App/Views/includes/header.html
@@ -5,16 +5,16 @@
   </div>
   <img
     class="header__bg"
-    src="img/hero_v2_1538.jpg"
+    src="img/hero_v3_1920.png"
     alt="Úvodní fotka s Táňou"
-    srcset="
+    style="object-position: center center"
+  />
+  <!-- TODO REMOVE srcset="
       img/hero_v2_800.jpg   800w,
       img/hero_v2_1000.jpg 1000w,
       img/hero_v2_1300.jpg 1300w,
       img/hero_v2_1538.jpg 1538w
     "
-    sizes="110vw"
-    style="object-position: center center"
-  />
+    sizes="110vw" -->
   <div class="header__overlay"></div>
 </header>
