--- a/App/Views/includes/profile.html
+++ b/App/Views/includes/profile.html
@@ -1,10 +1,13 @@
 <section class="profile">
-  <container class="profile__photo-container toBeAnimated animation-rollInFromLeft">
+  <container
+    class="profile__photo-container toBeAnimated animation-rollInFromLeft"
+  >
     <img
-      src="img/profile_1200.jpg"
+      src="img/profile_new.jpg"
       alt="Táňa"
       class="profile__photo toBeAnimated"
-      srcset="
+    />
+    <!-- TODO: Remove srcset="
         img/profile_600.jpg 600w,
         img/profile_800.jpg 800w,
         img/profile_1000.jpg 1000w,
@@ -19,8 +22,7 @@
         (max-width: 800px) 350px, 
         (max-width: 500px) 80vw,
         (max-width: 450px) 100vw
-      "
-    >
+      " -->
   </container>
   <div class="profile__text">
     <p class="paragraph-1">
