--- a/App/Views/includes/passedEvents.html
+++ b/App/Views/includes/passedEvents.html
@@ -1,42 +1,60 @@
 <section class="passedEvents">
-    <container class="passedEvents__image-container toBeAnimated animation-rollInVertically">
-        <img
-            src="img/flower_1920.jpg"
-            alt="Květiny"
-            class="passedEvents__image"
-            srcset="
-                img/flower_600.jpg 600w,
-                img/flower_1000.jpg 1000w,
-                img/flower_1400.jpg 1400w,
-                img/flower_1920.jpg 1920w,
-                img/flower_big.jpg 2400w
-            "
-        >
-    </container>
-    <div class="passedEvents__content">
-        <svg class="passedEvents__content__background" width="919" height="868" viewBox="0 0 919 868" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#passedEventsBackground" />
-        </svg>
-        <svg class="passedEvents__content__flowerBase" width="232" height="499" viewBox="0 0 232 499" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <use xlink:href="#flowerBase" />
-        </svg>
-        <div class="passedEvents__content__text-content">
-            <h3 class="heading-3">Kde jsme se sešli naposled</h3>
-            <ul class="passedEvents__content__list">
+  <container
+    class="passedEvents__image-container toBeAnimated animation-rollInVertically"
+  >
+    <img
+      src="img/flower_1920.jpg"
+      alt="Květiny"
+      class="passedEvents__image"
+      srcset="
+        img/flower_600.jpg   600w,
+        img/flower_1000.jpg 1000w,
+        img/flower_1400.jpg 1400w,
+        img/flower_1920.jpg 1920w,
+        img/flower_big.jpg  2400w
+      "
+    />
+  </container>
+  <div class="passedEvents__content">
+    <svg
+      class="passedEvents__content__background"
+      width="919"
+      height="868"
+      viewBox="0 0 919 868"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <use xlink:href="#passedEventsBackground" />
+    </svg>
+    <svg
+      class="passedEvents__content__flowerBase"
+      width="232"
+      height="499"
+      viewBox="0 0 232 499"
+      fill="none"
+      xmlns="http://www.w3.org/2000/svg"
+    >
+      <use xlink:href="#flowerBase" />
+    </svg>
+    <div class="passedEvents__content__text-content">
+      <h3 class="heading-3">Kde jsme se sešli naposled</h3>
+      <ul class="passedEvents__content__list">
+        {% for event in passedEvents %}
 
-                {% for event in passedEvents %}
+        <li class="passedEvents__content__item">
+          <span>></span> {{ event.event_title }}
+        </li>
 
-                    <li class="passedEvents__content__item"><span>></span> {{ event.event_title }}</li>
-
-                {% endfor %}
-                
-            </ul>
-        </div>
+        {% endfor %}
+      </ul>
     </div>
+  </div>
+  <!-- TODO: Fix mails or remove
     <form class="passedEvents__form" action="/subscribe" method="POST" autocomplete="off">
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
         <label class="toBeAnimated animation-bounceUp delay--10" for="email">Každou akci posílám na mail</label>
         <input class="passedEvents__form__email delay--15 toBeAnimated animation-bounceUp" type="email" name="email" id="email" placeholder="vas@email.cz">
         <input class="passedEvents__form__submit hidden" type="submit" name="submit" id="submit" value="Přidat se">
     </form>
+    -->
 </section>
